--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -58,7 +60,6 @@ body {
         transition: all 0.3s ease; /* Smooth transition for showing */
     }
 
-    /* Show content on hover */
     .card-container:hover .card-hover-content {
         opacity: 1;
         transform: translateY(0); /* Slide into view */
@@ -73,30 +74,477 @@ body {
     }
     .edit-icon {
         position: absolute;
-        top: -20px;
+        top: 10px;
         right: 10px;
         cursor: pointer;
         padding: 0.5rem;
-        background-color: rgba(255, 255, 255, 0.9); /* Slightly transparent background */
+        background-color: rgba(255, 255, 255, 0.9);
         border-radius: 50%;
-        transition: top 0.3s ease, opacity 0.3s ease; /* Transition for smooth movement */
-        opacity: 0; /* Initially hidden */
     }
 
     .delete-icon {
         position: absolute;
-        top: -20px;
+        top: 10px;
         left: 10px;
         cursor: pointer;
         padding: 0.5rem;
         background-color: rgba(255, 255, 255, 0.9);
         border-radius: 50%;
-        transition: top 0.3s ease, opacity 0.3s ease;
-        opacity: 0;
     }
 
-    .card-container:hover .edit-icon , .card-container:hover .delete-icon {
+
+    .modal-container {
+        position: absolute;
+        bottom: 3rem;
+        left: 50%;
+        transform: translateX(-50%) translateY(100%);
+        opacity: 0;
+        padding: 1rem;
+        border: 0.05rem solid;
+        border-radius: 0.5rem;
+        background-color: #333;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 0.5rem;
+        transition: transform 0.4s ease-out, opacity 0.4s ease-out;
+    }
+
+    .modal-container.show {
+        transform: translateX(-50%) translateY(0);
         opacity: 1;
-        top: 10px;
+    }
+
+    .main-error-page {
+      min-height: 600px;
+      margin: 0px auto;
+      width: auto;
+      max-width: 560px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+    .error-title {
+      max-width: 529px;
+      font-family: Roboto;
+      font-size: 38px;
+      font-weight: bold;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: center;
+      color: #4b4b62;
+      margin-bottom: 16px;
+    }
+
+    .error-subtitle {
+      max-width: 568px;
+      font-family: Roboto;
+      font-size: 16px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.31;
+      letter-spacing: normal;
+      text-align: center;
+      color: #4b4b62;
+      margin-bottom: 24px;
+    }
+
+    .full-torradeira {
+
+    }
+    .torradeira {
+    }
+
+    .pao-atras {
+      animation: leftright 1s alternate infinite;
+      transform-origin: center;
+    }
+    .pao-frente {
+        animation: leftright 1s 0.3s alternate infinite;
+      transform-origin: center;
+    }
+
+    .olho-esq {
+
+        animation: sad 2s alternate infinite;
+      transform-origin: center;
+    }
+
+    .olho-dir {
+
+        animation: sad 2s alternate infinite;
+      transform-origin: center;
+    }
+    .boca {
+        animation: sad 2s alternate infinite;
+      transform-origin: center;
+    }
+    .raios {
+      -webkit-animation: flicker-4 4s linear infinite both;
+      animation: flicker-4 4s linear infinite both;
+    }
+    .tomada {
+      -webkit-animation: vibrate-1 3s linear infinite both;
+                animation: vibrate-1 3s linear infinite both;
+    }
+    .fio-500 {
+      -webkit-animation: vibrate-1 3s linear infinite both;
+                animation: vibrate-1 3s linear infinite both;
+    }
+    .fio{
+      -webkit-animation: vibrate-1 3s linear infinite both;
+                animation: vibrate-1 3s linear infinite both;
+    }
+
+    @keyframes scales {
+      from {
+        transform: scale(0.98);
+      }
+      to {
+        transform: scale(1);
+      }
+    }
+
+    @-webkit-keyframes flicker-4 {
+      0%,
+      100% {
+        opacity: 1;
+      }
+      31.98% {
+        opacity: 1;
+      }
+      32% {
+        opacity: 0;
+      }
+      32.8% {
+        opacity: 0;
+      }
+      32.82% {
+        opacity: 1;
+      }
+      34.98% {
+        opacity: 1;
+      }
+      35% {
+        opacity: 0;
+      }
+      35.7% {
+        opacity: 0;
+      }
+      35.72% {
+        opacity: 1;
+      }
+      36.98% {
+        opacity: 1;
+      }
+      37% {
+        opacity: 0;
+      }
+      37.6% {
+        opacity: 0;
+      }
+      37.62% {
+        opacity: 1;
+      }
+      67.98% {
+        opacity: 1;
+      }
+      68% {
+        opacity: 0;
+      }
+      68.4% {
+        opacity: 0;
+      }
+      68.42% {
+        opacity: 1;
+      }
+      95.98% {
+        opacity: 1;
+      }
+      96% {
+        opacity: 0;
+      }
+      96.7% {
+        opacity: 0;
+      }
+      96.72% {
+        opacity: 1;
+      }
+      98.98% {
+        opacity: 1;
+      }
+      99% {
+        opacity: 0;
+      }
+      99.6% {
+        opacity: 0;
+      }
+      99.62% {
+        opacity: 1;
+      }
+    }
+    @keyframes flicker-4 {
+      0%,
+      100% {
+        opacity: 1;
+      }
+      31.98% {
+        opacity: 1;
+      }
+      32% {
+        opacity: 0;
+      }
+      32.8% {
+        opacity: 0;
+      }
+      32.82% {
+        opacity: 1;
+      }
+      34.98% {
+        opacity: 1;
+      }
+      35% {
+        opacity: 0;
+      }
+      35.7% {
+        opacity: 0;
+      }
+      35.72% {
+        opacity: 1;
+      }
+      36.98% {
+        opacity: 1;
+      }
+      37% {
+        opacity: 0;
+      }
+      37.6% {
+        opacity: 0;
+      }
+      37.62% {
+        opacity: 1;
+      }
+      67.98% {
+        opacity: 1;
+      }
+      68% {
+        opacity: 0;
+      }
+      68.4% {
+        opacity: 0;
+      }
+      68.42% {
+        opacity: 1;
+      }
+      95.98% {
+        opacity: 1;
+      }
+      96% {
+        opacity: 0;
+      }
+      96.7% {
+        opacity: 0;
+      }
+      96.72% {
+        opacity: 1;
+      }
+      98.98% {
+        opacity: 1;
+      }
+      99% {
+        opacity: 0;
+      }
+      99.6% {
+        opacity: 0;
+      }
+      99.62% {
+        opacity: 1;
+      }
+    }
+
+    @-webkit-keyframes vibrate-1 {
+      0% {
+        -webkit-transform: translate(0);
+                transform: translate(0);
+      }
+      20% {
+        -webkit-transform: translate(-2px, 2px);
+                transform: translate(-2px, 2px);
+      }
+      40% {
+        -webkit-transform: translate(-2px, -2px);
+                transform: translate(-2px, -2px);
+      }
+      60% {
+        -webkit-transform: translate(2px, 2px);
+                transform: translate(2px, 2px);
+      }
+      80% {
+        -webkit-transform: translate(2px, -2px);
+                transform: translate(2px, -2px);
+      }
+      100% {
+        -webkit-transform: translate(0);
+                transform: translate(0);
+      }
+    }
+    @keyframes vibrate-1 {
+      0% {
+        -webkit-transform: translate(0);
+                transform: translate(0);
+      }
+      20% {
+        -webkit-transform: translate(-2px, 2px);
+                transform: translate(-2px, 2px);
+      }
+      40% {
+        -webkit-transform: translate(-2px, -2px);
+                transform: translate(-2px, -2px);
+      }
+      60% {
+        -webkit-transform: translate(2px, 2px);
+                transform: translate(2px, 2px);
+      }
+      80% {
+        -webkit-transform: translate(2px, -2px);
+                transform: translate(2px, -2px);
+      }
+      100% {
+        -webkit-transform: translate(0);
+                transform: translate(0);
+      }
+    }
+
+    @-webkit-keyframes wobble-ver-right {
+      0%,
+      100% {
+        -webkit-transform: translateY(0) rotate(0);
+                transform: translateY(0) rotate(0);
+        -webkit-transform-origin: 50% 50%;
+                transform-origin: 50% 50%;
+      }
+      15% {
+        -webkit-transform: translateY(-30px) rotate(6deg);
+                transform: translateY(-30px) rotate(6deg);
+      }
+      30% {
+        -webkit-transform: translateY(15px) rotate(-6deg);
+                transform: translateY(15px) rotate(-6deg);
+      }
+      45% {
+        -webkit-transform: translateY(-15px) rotate(3.6deg);
+                transform: translateY(-15px) rotate(3.6deg);
+      }
+      60% {
+        -webkit-transform: translateY(9px) rotate(-2.4deg);
+                transform: translateY(9px) rotate(-2.4deg);
+      }
+      75% {
+        -webkit-transform: translateY(-6px) rotate(1.2deg);
+                transform: translateY(-6px) rotate(1.2deg);
+      }
+    }
+
+
+    @keyframes sad {
+      0% {
+        transform: rotateX(0deg) rotateY(0deg);
+      }
+      100% {
+        transform: rotateX(10deg)  rotateY(5deg);
+      }
+    }
+
+    @keyframes leftright{
+
+      0%{
+        transform: rotateZ( 0deg)
+      }
+       100%{
+        transform: rotateZ( -15deg)
+      }
+    }
+    body {
+  background-color: #2F3242;
+}
+
+    .message-box {
+      height: 200px;
+      width: 380px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-top: -100px;
+      margin-left: 50px;
+      color: black;
+      font-family: Roboto;
+      font-weight: 300;
+    }
+    .message-box h1 {
+      font-size: 60px;
+      line-height: 46px;
+      margin-bottom: 40px;
+    }
+    .buttons-con .action-link-wrap {
+      margin-top: 40px;
+    }
+    .buttons-con .action-link-wrap a {
+      background: #68c950;
+      padding: 8px 25px;
+      border-radius: 4px;
+      color: #FFF;
+      font-weight: bold;
+      font-size: 14px;
+      transition: all 0.3s linear;
+      cursor: pointer;
+      text-decoration: none;
+      margin-right: 10px
+    }
+    .buttons-con .action-link-wrap a:hover {
+      background: #5A5C6C;
+      color: #fff;
+    }
+
+    #Polygon-1 , #Polygon-2 , #Polygon-3 , #Polygon-4 , #Polygon-4, #Polygon-5 {
+      animation: float 1s infinite ease-in-out alternate;
+    }
+    #Polygon-2 {
+      animation-delay: .2s;
+    }
+    #Polygon-3 {
+      animation-delay: .4s;
+    }
+    #Polygon-4 {
+      animation-delay: .6s;
+    }
+    #Polygon-5 {
+      animation-delay: .8s;
+    }
+
+    @keyframes float {
+        100% {
+        transform: translateY(20px);
+      }
+    }
+    @media (max-width: 450px) {
+      svg {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-top: -250px;
+        margin-left: -190px;
+      }
+      .message-box {
+        top: 50%;
+        left: 50%;
+        margin-top: -100px;
+        margin-left: -190px;
+        text-align: center;
+      }
     }
 }
