new details and options😊

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,6 +47,15 @@ body {
     overflow: hidden; /* Ensures content doesn't overflow outside the card */
     }
 
+    .no-scrollbar::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, and Opera */
+    }
+
+    .no-scrollbar {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+    }
+
     /* Hover content that appears at the bottom */
     .card-hover-content {
         position: absolute;
